'fixed x overflow issue'

--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -754,6 +754,8 @@ a.chartDownloadBtn {
   position: relative;
   left: 86%;
   top: -115px;
+  width: 150px;
+  max-width: 150px;
 }
 .scales_meaningfulChange {
   width: 150px;
